LOG-2776: Enable FIPS mode to deploy elasticsearch on a FIPS enabled cluster
Signed-off-by: Shweta Padubidri <spadubid@redhat.com>